<resources>
    <string name="app_name">Marvel</string>
    <string name="error_generic">Oops! Something was wrong.</string>
    <string name="error_connection">Oops! There\'s no Internet connection and no more saved info. Check the network and try again.</string>
    <string name="error_email_already_in_use">The email address is already in use by another account.</string>
    <string name="error_empty_field">Please enter a value</string>
    <string name="error_no_results">There are no results that match your search</string>
    <string name="menu_search">Search</string>
    <!-- Sign in -->
    <string name="auth_toolbar_title">Welcome</string>
    <string name="signin_card_title">Sign in</string>
    <string name="signin_hint_email">Email</string>
    <string name="signin_hint_password">Password</string>
    <string name="signin_button_go">Go</string>
    <string name="signin_button_register">Create user</string>
    <string name="signin_pd_message">Signing in&#8230;</string>
    <string name="signin_error_unauthenticated">No user is signed in</string>
    <!-- Create user -->
    <string name="register_card_title">Create user</string>
    <string name="register_hint_username">Username</string>
    <string name="register_hint_email">Email</string>
    <string name="register_hint_password">Password</string>
    <string name="register_button_register">Create</string>
    <string name="register_button_sign_in">Sign in</string>
    <string name="register_pd_message">Creating user&#8230;</string>
    <string name="register_message_confirmation">User created. Welcome!</string>
    <!-- Home -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="home_nav_sign_out">Sign out</string>
    <string name="home_nav_about">About</string>
    <string name="home_characters">Characters</string>
    <string name="home_comics">Comics</string>
    <string name="home_favorites">My favorites</string>
    <string name="home_reviews">My reviews</string>
    <!-- Comics -->
    <string name="comicdetail_toolbar">Comic detail</string>
    <string name="comicdetail_nav_info">Info</string>
    <string name="comicdetail_nav_reviews">Reviews</string>
    <string name="comicdetail_nav_gallery">Gallery</string>
    <string name="comicinfo_hint_search">Search comic</string>
    <string name="comicinfo_label_summary">Summary</string>
    <string name="comicinfo_label_series">Series:</string>
    <string name="comicinfo_label_pages">Pages:</string>
    <string name="comicinfo_label_isbn">ISBN:</string>
    <string name="comicinfo_label_format">Format:</string>
    <string name="comicinfo_label_dates">Dates</string>
    <string name="comicinfo_label_credits">Credits</string>
    <string name="comicinfo_label_characters">Characters</string>
    <string name="comicnewreview_hint_review">Review</string>
    <string name="comicnewreview_button">Publish</string>
    <string name="comicnewreview_message_required_fields">Oops! Some field is empty</string>
    <string name="comicnewreview_message_confirmation">Review published!</string>
    <!-- Characters -->
    <string name="transition_character_detail">character_detail</string>
    <string name="characterslist_hint_search">Search character</string>
    <string name="characterdetail_toolbar_title">Character detail</string>
    <string name="characterdetail_label_description_empty">No description yet</string>
    <string name="characterdetail_title_links">Links</string>
    <string name="characterdetail_title_comics">Comics</string>
    <string name="characterdetail_button_comics">More</string>
    <!-- My reviews -->
    <string name="myreviews_button">Open comic</string>
    <string name="myreviews_warning_empty">There are no reviews</string>
    <!-- Favorites -->
    <string name="favorite_warning_empty">There are no favorites</string>
    <!-- About -->
    <string name="about_data">Data provided by Marvel. © 2017 Marvel.\n\n<div>App icon made by <a href="https://www.flaticon.com/authors/creaticca-creative-agency" title="Creaticca Creative Agency">Creaticca Creative Agency</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div></string>
</resources>